kubernetes/registration-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-microservice-registration
  labels:
    app: springboot-microservice-registration
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-microservice-registration
  template:
    metadata:
      labels:
        app: springboot-microservice-registration
    spec:
      containers:
      - name: course-service
        image: vamsitechtuts/registrationservice:latest
        ports:
        - containerPort: 9093
