kubernetes/user-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-microservice-user
  labels:
    app: springboot-microservice-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-microservice-user
  template:
    metadata:
      labels:
        app: springboot-microservice-user
    spec:
      containers:
      - name: course-service
        image: vamsitechtuts/userservice:latest
        ports:
        - containerPort: 9091
