kubernetes/course-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: springboot-microservice-course-svc
spec:
  type: LoadBalancer
  selector:
    app: springboot-microservice-course
  ports:
  - name: http
    protocol: TCP
    port: 9092
    targetPort: 9092
