kubernetes/registration-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: springboot-microservice-registration-svc
spec:
  type: LoadBalancer
  selector:
    app: springboot-microservice-registration
  ports:
  - name: http
    protocol: TCP
    port: 9093
    targetPort: 9093
