kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - springboot.vamsiawstraining.com
    secretName: spring-tls
  rules:
  - host: springboot.vamsiawstraining.com
    http:
      paths:
      - path: /enrollUser
        backend:
          serviceName: springboot-microservice-user-svc
          servicePort: 9091
      - path: /updateuserInformation
        backend:
          serviceName: springboot-microservice-user-svc
          servicePort: 9091
      - path: /deletUser
        backend:
          serviceName: springboot-microservice-user-svc
          servicePort: 9091
      - path: /getAllUsers
        backend:
          serviceName: springboot-microservice-user-svc
          servicePort: 9091
      - path: /getAwsCourseSyllabus
        backend:
          serviceName: springboot-microservice-course-svc
          servicePort: 9092
      - path: /getDevopsCourseSyllabus
        backend:
          serviceName: springboot-microservice-course-svc
          servicePort: 9092
      - path: /enrollForCourse
        backend:
          serviceName: springboot-microservice-registration-svc
          servicePort: 9093
